--- a/pfm_test.html
+++ b/pfm_test.html
@@ -3615,7 +3615,7 @@
 
                     <video class="video-js vjs-default-skin" controls="" preload="auto" poster="really-cool-video-poster.jpg" data-setup="{}" style="width: 100%; height: 100%;" width="100%" height="100%">
  
-  <source src="20171208%20agreement%20signing.mp4" type="video/mp4">
+  <source src="20171208_agreement_signing.mp4" type="video/mp4">
  
   <p class="vjs-no-js">
     To view this video please enable JavaScript, and consider upgrading to a web browser
