--- a/pfm_test.html
+++ b/pfm_test.html
@@ -56,6 +56,14 @@
             left: 98px;
         }
         
+        .silex-id-1514637597646-0 {
+            width: 343px;
+            background-color: rgb(255, 255, 255);
+            min-height: 169px;
+            top: 326px;
+            left: 248px;
+        }
+        
         .silex-id-1478366450713-3 {
             top: 100px;
             left: NaNpx;
@@ -77,7 +85,7 @@
     </style>
     <title></title>
     <script type="text/javascript" class="silex-json-styles">
-        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"600px","background-color":"transparent","width":"1200px"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"430px"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1478366450713-3":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1513301091110-0":{"width":"389px","background-color":"rgb(255, 255, 255)","min-height":"175px","top":"31px","left":"98px"}},"mobile":{},"componentData":{}}]
+        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"600px","background-color":"transparent","width":"1200px"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"430px"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1478366450713-3":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1513301091110-0":{"width":"389px","background-color":"rgb(255, 255, 255)","min-height":"175px","top":"31px","left":"98px"},"silex-id-1514637597646-0":{"width":"343px","background-color":"rgb(255, 255, 255)","min-height":"169px","top":"326px","left":"248px"}},"mobile":{},"componentData":{}}]
     </script>
 
 
@@ -749,7 +757,7 @@
         [href^="//myalternativegflink.com/track/"],
         [href^="//secure.18exgfs.com/track/"],
         [href^="//secure.badassgirlfriends.com/track/"],
-        [href^="http://secure.chatrevenge.com/track/"],
+        [href^="//secure.chatrevenge.com/track/"],
         [href^="http://secure.fubilov.com/track/"],
         [href^="http://secure.hotgfvideos.com/track/"],
         [href^="http://secure.mynngf.com/track/"],
@@ -4956,7 +4964,7 @@
         a[href^="http://www.socialsex.com/"],
         a[href^="http://www.yourfuckbook.com/?"],
         a[href^="https://ad.doubleclick.net/"],
-        a[onmousedown^="this.href='https://paid.outbrain.com/network/redir?"][target="_blank"],
+        a[onmousedown^="this.href='https://paid.outbrain.com/network/redir"][target="_blank"],
         div[id^="MarketGid"],
         div[id^="advads-"],
         div[id^="dfp-ad-"],
@@ -4971,6 +4979,8 @@
             background-color: #6e2091 !important;
         }
     </style>
+
+
     <style id="current-page-style">
         .page-page-1 {
             display: inherit;
@@ -5038,6 +5048,22 @@
 
                 </div>
             </div>
+            <div data-silex-type="html" class="editable-style silex-id-1514637597646-0 html-element" data-silex-id="silex-id-1514637597646-0" style="">
+                <div class="silex-element-content">
+                    <p>New HTML box 2</p>
+
+
+                    <video class="video-js vjs-default-skin" controls="" preload="auto" poster="really-cool-video-poster.jpg" data-setup="{}" style="width: 100%; height: 100%;" width="100%" height="100%">
+ 
+  <source src="videos/test.mp4" type="video/mp4">
+ 
+  <p class="vjs-no-js">
+    To view this video please enable JavaScript, and consider upgrading to a web browser
+    that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+  </p>
+</video>
+                </div>
+            </div>
         </div>
     </div>
     <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1478366450713-3 section-element" data-silex-id="silex-id-1478366450713-3" style="">
@@ -5051,6 +5077,8 @@
             </div>
         </div>
     </div>
+
+
 
 
 
