--- a/pfm_test.html
+++ b/pfm_test.html
@@ -57,11 +57,11 @@
         }
         
         .silex-id-1514629390370-0 {
-            width: 511px;
+            width: 314px;
             background-color: rgb(255, 255, 255);
-            min-height: 463px;
-            top: 172px;
-            left: 107px;
+            min-height: 198px;
+            top: 55px;
+            left: 546px;
         }
         
         .silex-id-1478366450713-3 {
@@ -85,7 +85,7 @@
     </style>
     <title></title>
     <script type="text/javascript" class="silex-json-styles">
-        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"600px","background-color":"transparent","width":"1200px"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"430px"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1478366450713-3":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1513301091110-0":{"width":"389px","background-color":"rgb(255, 255, 255)","min-height":"175px","top":"31px","left":"98px"},"silex-id-1514629390370-0":{"width":"511px","background-color":"rgb(255, 255, 255)","min-height":"463px","top":"288px","left":"37px"}},"mobile":{},"componentData":{}}]
+        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"600px","background-color":"transparent","width":"1200px"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"430px"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1478366450713-3":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1513301091110-0":{"width":"389px","background-color":"rgb(255, 255, 255)","min-height":"175px","top":"31px","left":"98px"},"silex-id-1514629390370-0":{"width":"314px","background-color":"rgb(255, 255, 255)","min-height":"198px","top":"55px","left":"546px"}},"mobile":{},"componentData":{}}]
     </script>
 
 
@@ -5050,10 +5050,10 @@
             </div>
             <div data-silex-type="html" class="editable-style silex-id-1514629390370-0 html-element" data-silex-id="silex-id-1514629390370-0" style="">
                 <div class="silex-element-content">
-                    <p>New HTML box link to vemio</p>
-
-                    <iframe src="https://player.vimeo.com/video/249162482" width="640" height="356" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
-                    <p><a href="https://vimeo.com/249162482">test</a> from <a href="https://vimeo.com/user77822382">ik</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+                    <iframe src="https://player.vimeo.com/video/249162482" width="320" height="178" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+                    <p>
+                        <a href="https://vimeo.com/249162482"></a>
+                    </p>
                 </div>
             </div>
         </div>
