--- a/pfm_test.html
+++ b/pfm_test.html
@@ -64,6 +64,14 @@
             left: 546px;
         }
         
+        .silex-id-1514646601737-1 {
+            width: 427px;
+            background-color: rgb(255, 255, 255);
+            min-height: 145px;
+            top: 390px;
+            left: 463px;
+        }
+        
         .silex-id-1478366450713-3 {
             top: 100px;
             left: NaNpx;
@@ -85,7 +93,7 @@
     </style>
     <title></title>
     <script type="text/javascript" class="silex-json-styles">
-        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"600px","background-color":"transparent","width":"1200px"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"430px"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1478366450713-3":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1513301091110-0":{"width":"389px","background-color":"rgb(255, 255, 255)","min-height":"175px","top":"31px","left":"98px"},"silex-id-1514629390370-0":{"width":"314px","background-color":"rgb(255, 255, 255)","min-height":"198px","top":"55px","left":"546px"}},"mobile":{},"componentData":{}}]
+        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"600px","background-color":"transparent","width":"1200px"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"430px"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1478366450713-3":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1513301091110-0":{"width":"389px","background-color":"rgb(255, 255, 255)","min-height":"175px","top":"31px","left":"98px"},"silex-id-1514629390370-0":{"width":"314px","background-color":"rgb(255, 255, 255)","min-height":"198px","top":"55px","left":"546px"},"silex-id-1514646601737-1":{"width":"427px","background-color":"rgb(255, 255, 255)","min-height":"145px","top":"390px","left":"463px"}},"mobile":{},"componentData":{}}]
     </script>
 
 
@@ -5055,6 +5063,20 @@
                         <a href="https://vimeo.com/249162482"></a>
                     </p>
                 </div>
+            </div>
+            <div data-silex-type="html" class="editable-style silex-id-1514646601737-1 html-element" data-silex-id="silex-id-1514646601737-1" style="">
+                <div class="silex-element-content">
+                    <p>videos/test</p>
+
+                    <video class="video-js vjs-default-skin" controls="" preload="auto" poster="really-cool-video-poster.jpg" data-setup="{}" style="width: 100%; height: 100%;" width="100%" height="100%">
+ 
+  <source src="videos/test.mp4" type="video/mp4">
+ 
+  <p class="vjs-no-js">
+    To view this video please enable JavaScript, and consider upgrading to a web browser
+    that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+  </p>
+</video></div>
             </div>
         </div>
     </div>
