--- a/pfm_test.html
+++ b/pfm_test.html
@@ -89,6 +89,14 @@
             left: 501px;
         }
         
+        .silex-id-1514944451578-0 {
+            width: 365px;
+            background-color: rgb(255, 255, 255);
+            min-height: 100px;
+            top: 68px;
+            left: 287px;
+        }
+        
         .silex-id-1478366450713-3 {
             top: 100px;
             left: NaNpx;
@@ -110,7 +118,7 @@
     </style>
     <title></title>
     <script type="text/javascript" class="silex-json-styles">
-        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"top":"140px","left":"5px"},"silex-id-1474394621032-2":{"min-height":"600px","background-color":"transparent","width":"1200px"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"144px"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1478366450713-3":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1513301091110-0":{"width":"389px","background-color":"rgb(255, 255, 255)","min-height":"175px","top":"31px","left":"98px"},"silex-id-1514629390370-0":{"width":"314px","background-color":"rgb(255, 255, 255)","min-height":"198px","top":"55px","left":"546px"},"silex-id-1514646601737-1":{"width":"427px","background-color":"rgb(255, 255, 255)","min-height":"145px","top":"309px","left":"98px"},"silex-id-1514691503857-0":{"width":"475px","background-color":"rgb(255, 255, 255)","min-height":"234px","top":"281px","left":"650px"},"silex-id-1514943626252-0":{"width":"100px","min-height":"100px","top":"251px","left":"501px"}},"mobile":{},"componentData":{}}]
+        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"top":"140px","left":"5px"},"silex-id-1474394621032-2":{"min-height":"600px","background-color":"transparent","width":"1200px"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"144px"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent","width":"1200px"},"silex-id-1478366450713-3":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1513301091110-0":{"width":"389px","background-color":"rgb(255, 255, 255)","min-height":"175px","top":"31px","left":"98px"},"silex-id-1514629390370-0":{"width":"314px","background-color":"rgb(255, 255, 255)","min-height":"198px","top":"55px","left":"546px"},"silex-id-1514646601737-1":{"width":"427px","background-color":"rgb(255, 255, 255)","min-height":"145px","top":"309px","left":"98px"},"silex-id-1514691503857-0":{"width":"475px","background-color":"rgb(255, 255, 255)","min-height":"234px","top":"281px","left":"650px"},"silex-id-1514943626252-0":{"width":"100px","min-height":"100px","top":"251px","left":"501px"},"silex-id-1514944451578-0":{"width":"365px","background-color":"rgb(255, 255, 255)","min-height":"100px","top":"68px","left":"287px"}},"mobile":{},"componentData":{}}]
     </script>
 
 
@@ -6501,6 +6509,49 @@
 
             <div data-silex-type="text" class="editable-style silex-id-1514943626252-0 text-element page-page-1 paged-element page-link-active" data-silex-id="silex-id-1514943626252-0" style="" data-silex-href="#!page-page2">
                 <div class="silex-element-content normal">Link to Page 2<br><br></div>
+            </div>
+            <div data-silex-type="html" class="editable-style silex-id-1514944451578-0 html-element page-page2 paged-element" data-silex-id="silex-id-1514944451578-0" style="">
+                <div class="silex-element-content">
+
+                    <meta charset="utf-8">
+                    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                    <title>Foundation 的縮圖</title>
+                    <link rel="stylesheet" href="css/foundation.css">
+                    <link rel="stylesheet" href="foundation-icons/foundation-icons.css">
+                    <script src="js/vendor/modernizr.js"></script>
+
+
+
+                    <a class="th" href="img/fruit.jpg">
+                        <img src="img/fruit-icon.jpg">
+                    </a>
+
+                    <p></p>
+
+                    <ul class="clearing-thumbs" data-clearing="">
+
+                        <li>
+                            <a href="img/pineapple.jpg"><img data-caption="剖面圖" src="img/pineapple-icon.jpg" width="100" height="100"></a>
+                        </li>
+
+                        <li>
+                            <a href="img/durian.jpg"><img data-caption="堅硬長刺" src="img/durian-icon.jpg" width="100" height="100"></a>
+                        </li>
+
+                        <li>
+                            <a href="img/litchi.jpg"><img data-caption="一大串果實" src="img/litchi-icon.jpg" width="100" height="100"></a>
+                        </li>
+
+                    </ul>
+
+                    <script src="js/vendor/jquery.js"></script>
+                    <script src="js/foundation.min.js"></script>
+                    <script>
+                        $(document).foundation();
+                    </script>
+
+
+                </div>
             </div>
         </div>
     </div>
