--- a/pfm_test.html
+++ b/pfm_test.html
@@ -7109,7 +7109,7 @@
         }
     </style>
     <style id="current-page-style">
-        .page-page-1 {
+        .page-page2 {
             display: inherit;
         }
     </style>
@@ -7127,7 +7127,7 @@
                 class="silex-element-content">
         </div>
 
-        <a id="page-page-1" data-silex-type="page" class="page-element page-link-active">Page 1</a><a id="page-page2" data-silex-type="page" class="page-element">Page2</a></div>
+        <a id="page-page-1" data-silex-type="page" class="page-element">Page 1</a><a id="page-page2" data-silex-type="page" class="page-element page-link-active">Page2</a></div>
 
 
 
@@ -7177,7 +7177,7 @@
             </div>
             <div data-silex-type="html" class="editable-style silex-id-1514629390370-0 html-element page-page-1 paged-element" data-silex-id="silex-id-1514629390370-0" style="">
                 <div class="silex-element-content">
-                    <iframe https:="" editor.silex.me="" api="" 1.0="" github="" exec="" get="" pfm_test="" master="" pfm_test.htmlsrc="" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" data-silex-iframe-src="https://player.vimeo.com/video/249162482" src="https://player.vimeo.com/video/249162482"
+                    <iframe https:="" editor.silex.me="" api="" 1.0="" github="" exec="" get="" pfm_test="" master="" pfm_test.htmlsrc="" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" data-silex-iframe-src="https://player.vimeo.com/video/249162482" src=""
                         width="320" height="178" frameborder="0"></iframe>
                     <p>
                         <a href="https://vimeo.com/249162482"></a>
@@ -7201,12 +7201,12 @@
             </div>
             <div data-silex-type="html" class="editable-style silex-id-1514691503857-0 html-element page-page-1 paged-element" data-silex-id="silex-id-1514691503857-0" style="">
                 <div class="silex-element-content"><iframe scrolling="no" marginheight="0" marginwidth="0" https:="" editor.silex.me="" api="" 1.0="" github="" exec="" get="" pfm_test="" master="" pfm_test.htmlsrc="" style="border: 1px solid black" data-silex-iframe-src="https://www.openstreetmap.org/export/embed.html?bbox=113.54672670364381,22.184792218694366,113.55777740478517,22.19036541277577&amp;%0Alayer=mapnik&amp;marker=22.187578843371703,113.55225205421448"
-                        src="https://www.openstreetmap.org/export/embed.html?bbox=113.54672670364381,22.184792218694366,113.55777740478517,22.19036541277577&amp;%0Alayer=mapnik&amp;marker=22.187578843371703,113.55225205421448" width="100%" height="350" frameborder="0"></iframe><br><small>
+                        src="" width="100%" height="350" frameborder="0"></iframe><br><small>
     <a href="https://www.openstreetmap.org/?mlat=22.18758&amp;mlon=113.55225#map=17/22.18758/113.55225&amp;layers=N">View Larger Map</a></small>
                 </div>
             </div>
 
-            <div data-silex-type="text" class="editable-style silex-id-1514943626252-0 text-element page-page-1 paged-element" data-silex-id="silex-id-1514943626252-0" style="" data-silex-href="#!page-page2">
+            <div data-silex-type="text" class="editable-style silex-id-1514943626252-0 text-element page-page-1 paged-element page-link-active" data-silex-id="silex-id-1514943626252-0" style="" data-silex-href="#!page-page2">
                 <div class="silex-element-content normal">Link to Page 2<br><br></div>
             </div>
             <div data-silex-type="html" class="editable-style silex-id-1514944451578-0 html-element page-page2 paged-element" data-silex-id="silex-id-1514944451578-0" style="">
