--- a/pfm_test.html
+++ b/pfm_test.html
@@ -8632,7 +8632,7 @@
 
                     <video class="video-js vjs-default-skin" controls="" preload="auto" poster="really-cool-video-poster.jpg" data-setup="{}" style="width: 100%; height: 100%;" width="100%" height="100%">
  
-  <source src="videos/t.mp4" type="video/mp4">
+  <source src="../../../../../../../videos/t.mp4" type="video/mp4">
  
   <p class="vjs-no-js">
     To view this video please enable JavaScript, and consider upgrading to a web browser
@@ -8664,7 +8664,7 @@
             </div>
             <div data-silex-type="html" class="editable-style silex-id-1514971665139-0 html-element page-page-1 paged-element" data-silex-id="silex-id-1514971665139-0" style="">
                 <div class="silex-element-content">
-                    <p>New HTML box /pub/videos/test.mp4</p>
+                    <p>New HTML box /pub/videos/test2.mp4</p>
                     <video class="video-js vjs-default-skin" controls="" preload="auto" poster="really-cool-video-poster.jpg" data-setup="{}" style="width: 100%; height: 100%;" width="100%" height="100%">
  
   <source src="videos/test2.mp4" type="video/mp4">
